--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -67,14 +67,12 @@
     "from torchvision.datasets import CIFAR100\n",
     "from torchvision import transforms\n",
     "\n",
-    "# PyTorch Lightning\n",
-    "# try:\n",
-    "#     import pytorch_lightning as pl\n",
-    "# except ModuleNotFoundError: # Google Colab does not have PyTorch Lightning installed by default. Hence, we do it here if necessary\n",
-    "#     !pip install --quiet pytorch-lightning>=1.4\n",
-    "#     import pytorch_lightning as pl\n",
-    "# from pytorch_lightning.callbacks import LearningRateMonitor, ModelCheckpoint\n",
-    "import pytorch_lightning as pl\n",
+    "## PyTorch Lightning\n",
+    "try:\n",
+    "    import pytorch_lightning as pl\n",
+    "except ModuleNotFoundError: # Google Colab does not have PyTorch Lightning installed by default. Hence, we do it here if necessary\n",
+    "    !pip install --quiet pytorch-lightning>=1.4\n",
+    "    import pytorch_lightning as pl\n",
     "from pytorch_lightning.callbacks import LearningRateMonitor, ModelCheckpoint\n",
     "\n",
     "# chemin vers le fichier où les datasets seront téléchargés\n",
